--- a/template.yaml
+++ b/template.yaml
@@ -130,10 +130,16 @@ rules:
   - IP-CIDR,172.16.0.0/12,🎯 全球直连,no-resolve
   - IP-CIDR,127.0.0.0/8,🎯 全球直连,no-resolve
   - IP-CIDR,100.64.0.0/10,🎯 全球直连,no-resolve
+  - IP-CIDR,104.128.93.147/32,🎯 全球直连,no-resolve
   - IP-CIDR6,::1/128,🎯 全球直连,no-resolve
   - IP-CIDR6,fc00::/7,🎯 全球直连,no-resolve
   - IP-CIDR6,fe80::/10,🎯 全球直连,no-resolve
   - IP-CIDR6,fd00::/8,🎯 全球直连,no-resolve
+  - DOMAIN-SUFFIX,ollama.ai,🎯 全球直连
+  - DOMAIN-SUFFIX,anchnet.com,🎯 全球直连
+  - DOMAIN-SUFFIX,cgw2.com,🎯 全球直连
+  - DOMAIN-SUFFIX,ttmic.xyz,🎯 全球直连
+  - DOMAIN,dns.alidns.com,🎯 全球直连
   - DOMAIN-KEYWORD,1drv,Ⓜ️ 微软服务
   - DOMAIN-KEYWORD,microsoft,Ⓜ️ 微软服务
   - DOMAIN-SUFFIX,aadrm.com,Ⓜ️ 微软服务
